# AlgoLLM

./: README.md  main.py  pyproject.toml
01_基础概念/关于loss、梯度/: WhyGradientDescent.md  loss_gradientDescent.ipynb  loss基础.md  优化器.md  梯度下降法.md  梯度基础.md
01_基础概念/手写attention/: cross-attention.py  multi_head_attn.py  self-attention.py
01_基础概念/激活函数/: 激活函数.md
01_基础概念/编码、tokenizer/: RoPE.md  qwen_tokenizer.ipynb  位置编码.md
02_RLHF/PPO/: PPO_cartpole.md  ppo_cartpole_v2.py  ppo_cartpole_with_gif_verbose.py
10_LLM4rec/: 具体流程.md  搜广推的前世今生.md
